# manga-translator-agent

./: .gitignore  CLAUDE.md  README.md  README.mga-draft.md  plan.md  pyproject.toml
docs/: 2026-05-19-mga-novel-mode-inspiration.md  PRD.md  ROADMAP.md  SPEC.md
docs/analysis/: external-first-security-audit-2026-05-16.md  openhuman-wiki-rag-for-mga.md  phase1-benchmark-validation-2026-05-16.md  追本-漫画翻译的本质.org  降秩-漫画翻译的核心力.org
docs/issues/: internal-direct-vision-regression.md
docs/research/: market-landscape.md  oss-landscape.md
manga_translate/: __init__.py  cli.py  exceptions.py  format.py  models.py
manga_translate/artifacts/: __init__.py
manga_translate/benchmark/: __init__.py  evaluate.py  external.py
manga_translate/legacy/: __init__.py  providers.py
manga_translate/runtime/: __init__.py  external.py
manga_translator/: __init__.py  args.py  config.py  manga_translator.py
manga_translator/detection/: ctd.py
manga_translator/mask_refinement/: __init__.py
manga_translator/mode/: local.py
manga_translator/pipeline/: __init__.py  contract.py  reorder.py
manga_translator/rendering/: __init__.py
mga/: __init__.py  exceptions.py
mga/artifacts/: __init__.py  run_summary.py  store.py  translation_report.py
mga/benchmark/: __init__.py  evaluate.py  external.py
mga/cli/: __init__.py  main.py
mga/config/: __init__.py  loader.py
mga/cultural/: __init__.py  classifier.py  coinage_detector.py  cultural_adapter.py  honorific.py  qa_check.py  strategies.py  term_classifier.py  terminology_db.py
mga/format/: __init__.py  base.py  bilingual.py  bilingual_pdf.py  cbz_adapter.py  epub_adapter.py  image_utils.py  images.py  manifest.py  mobi_adapter.py  novel_epub.py  novel_mobi.py  novel_txt.py  pdf_adapter.py
mga/learning/: __init__.py  aligner.py  dual_vision.py  engine.py  models.py  pattern_extractor.py  validator.py
mga/memory/: __init__.py  entities.py  evolution_tracker.py  graph.py  (+10 more)
scripts/: assemble_external_smoke_review.py  run_external_review_batch.sh  setup_external_mit_env.sh
test/: test_bubble_mask_prior.py  test_post_ocr_pipeline.py
tests/: README.md
(+97 files in other folders)
